--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-streamlit>=1.34
-pandas>=2.0
-openpyxl>=3.1
-plotly>=5.20
-reportlab>=4.0
-sqlalchemy>=2.0
-psycopg2-binary>=2.9
+streamlit>=1.30
+pandas
+plotly
+openpyxl
+reportlab
+sqlalchemy
+supabase
+httpx
